// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`serializes block with layer text 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "text": "",
      },
    ],
    "isRoot": true,
    "layerPath": Array [],
    "symbolId": "61eb943b-7ee7-4b33-9315-aac7cb2d2764",
    "type": "paragraph",
  },
  Object {
    "children": Array [
      Object {
        "text": "",
      },
    ],
    "isRoot": false,
    "layerPath": Array [
      "d6593501-b089-4390-bbe2-fb10afb5df5a",
      "1dea1c4d-f1bd-473b-a1aa-a0c6a1481ae2",
    ],
    "symbolId": "a1f7266f-50cc-416f-9ed2-4af4bca30257",
    "type": "paragraph",
  },
  Object {
    "children": Array [
      Object {
        "text": "",
      },
    ],
    "isRoot": false,
    "layerPath": Array [
      "d6593501-b089-4390-bbe2-fb10afb5df5a",
      "ef2d5b26-aa1c-40d3-8bab-37c10bccc5cb",
    ],
    "symbolId": "955f4cb1-7879-4331-a359-a21a031147cb",
    "type": "paragraph",
  },
  Object {
    "children": Array [
      Object {
        "text": "hello",
      },
    ],
    "isRoot": false,
    "layerPath": Array [
      "aa722c35-9ba4-4bf3-a5d0-f7d17f02c361",
    ],
    "symbolId": "b8441949-12ba-42be-8f87-5cf222af70d0",
    "type": "paragraph",
  },
  Object {
    "children": Array [
      Object {
        "text": "",
      },
    ],
    "isRoot": false,
    "layerPath": Array [
      "83d2fdeb-6f4d-4948-a677-fe1f2aac64d5",
      "6b386c69-d6cf-4c2f-ae06-c92af43268d5",
    ],
    "symbolId": "cdf2346b-cb21-4f23-8d93-7c4fb2e3a5a0",
    "type": "paragraph",
  },
  Object {
    "children": Array [
      Object {
        "text": "",
      },
    ],
    "isRoot": false,
    "layerPath": Array [
      "83d2fdeb-6f4d-4948-a677-fe1f2aac64d5",
      "eee85c94-7361-4bcf-8afb-f59c6e8661f7",
    ],
    "symbolId": "5be80b87-7bd6-4090-8947-316d54064544",
    "type": "paragraph",
  },
]
`;

exports[`serializes block with layer text: content 1`] = `
Object {
  "blockText": "",
  "layerPath": Array [],
  "overrides": Array [
    Object {
      "_class": "overrideValue",
      "overrideName": "d6593501-b089-4390-bbe2-fb10afb5df5a/1dea1c4d-f1bd-473b-a1aa-a0c6a1481ae2_blockText",
      "value": "",
    },
    Object {
      "_class": "overrideValue",
      "overrideName": "d6593501-b089-4390-bbe2-fb10afb5df5a/ef2d5b26-aa1c-40d3-8bab-37c10bccc5cb_blockText",
      "value": "",
    },
    Object {
      "_class": "overrideValue",
      "overrideName": "aa722c35-9ba4-4bf3-a5d0-f7d17f02c361_blockText",
      "value": "hello",
    },
    Object {
      "_class": "overrideValue",
      "overrideName": "83d2fdeb-6f4d-4948-a677-fe1f2aac64d5/6b386c69-d6cf-4c2f-ae06-c92af43268d5_blockText",
      "value": "",
    },
    Object {
      "_class": "overrideValue",
      "overrideName": "83d2fdeb-6f4d-4948-a677-fe1f2aac64d5/eee85c94-7361-4bcf-8afb-f59c6e8661f7_blockText",
      "value": "",
    },
  ],
  "symbolId": "61eb943b-7ee7-4b33-9315-aac7cb2d2764",
}
`;

exports[`serializes block with layer text: nodes 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "text": "",
      },
    ],
    "isRoot": true,
    "layerPath": Array [],
    "symbolId": "61eb943b-7ee7-4b33-9315-aac7cb2d2764",
    "type": "paragraph",
  },
  Object {
    "children": Array [
      Object {
        "text": "",
      },
    ],
    "isRoot": false,
    "layerPath": Array [
      "d6593501-b089-4390-bbe2-fb10afb5df5a",
      "1dea1c4d-f1bd-473b-a1aa-a0c6a1481ae2",
    ],
    "symbolId": "a1f7266f-50cc-416f-9ed2-4af4bca30257",
    "type": "paragraph",
  },
  Object {
    "children": Array [
      Object {
        "text": "",
      },
    ],
    "isRoot": false,
    "layerPath": Array [
      "d6593501-b089-4390-bbe2-fb10afb5df5a",
      "ef2d5b26-aa1c-40d3-8bab-37c10bccc5cb",
    ],
    "symbolId": "955f4cb1-7879-4331-a359-a21a031147cb",
    "type": "paragraph",
  },
  Object {
    "children": Array [
      Object {
        "text": "hello",
      },
    ],
    "isRoot": false,
    "layerPath": Array [
      "aa722c35-9ba4-4bf3-a5d0-f7d17f02c361",
    ],
    "symbolId": "b8441949-12ba-42be-8f87-5cf222af70d0",
    "type": "paragraph",
  },
  Object {
    "children": Array [
      Object {
        "text": "",
      },
    ],
    "isRoot": false,
    "layerPath": Array [
      "83d2fdeb-6f4d-4948-a677-fe1f2aac64d5",
      "6b386c69-d6cf-4c2f-ae06-c92af43268d5",
    ],
    "symbolId": "cdf2346b-cb21-4f23-8d93-7c4fb2e3a5a0",
    "type": "paragraph",
  },
  Object {
    "children": Array [
      Object {
        "text": "",
      },
    ],
    "isRoot": false,
    "layerPath": Array [
      "83d2fdeb-6f4d-4948-a677-fe1f2aac64d5",
      "eee85c94-7361-4bcf-8afb-f59c6e8661f7",
    ],
    "symbolId": "5be80b87-7bd6-4090-8947-316d54064544",
    "type": "paragraph",
  },
]
`;

exports[`serializes block with layer text: originalContent 1`] = `
Object {
  "blockText": "",
  "layerPath": Array [],
  "overrides": Array [
    Object {
      "_class": "overrideValue",
      "overrideName": "aa722c35-9ba4-4bf3-a5d0-f7d17f02c361_blockText",
      "value": "hello",
    },
  ],
  "symbolId": "61eb943b-7ee7-4b33-9315-aac7cb2d2764",
}
`;
